--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before_install:
     - export PATH=/home/travis/miniconda/bin:$PATH
     - conda create --yes -n travis python=$TRAVIS_PYTHON_VERSION
     #- sudo apt-get install -qq $(< requirements_apt.txt)
-    - ./get_test_data.sh
+    - ./scripts/get_test_data.sh
 # command to install dependencies
 install:
     - conda update --yes conda
