--- a/meta.yaml
+++ b/meta.yaml
@@ -5,7 +5,7 @@ package:
 source:
 # this is used for build from git hub
   git_rev: 0.1.1
-  git_url: https://github.com/mjirik/io3d.git
+  git_url: https://github.com/mjirik/bodynavigation.git
 
 # this is used for pypi 
   # fn: io3d-1.0.30.tar.gz
