--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,29 @@
 language: python
-python:
-  #  - "2.6"
-  - "2.7"
-  # - "3.2"
-  # - "3.3"
-  # - "3.4"
-virtualenv:
-    system_site_packages: false
+#virtualenv:
+#    system_site_packages: false
+env:
+    - CONDA_PYTHON_VERSION=2.7
+    - CONDA_PYTHON_VERSION=3.6
+
 before_install:
-    - wget http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh
-    - chmod +x miniconda.sh
-    - ./miniconda.sh -b -p /home/travis/miniconda
-    - export PATH=/home/travis/miniconda/bin:$PATH
-    - conda create --yes -n travis python=$TRAVIS_PYTHON_VERSION
-    #- sudo apt-get install -qq $(< requirements_apt.txt)
-    - ./scripts/get_test_data.sh
+    # We do this conditionally because it saves us some downloading if the
+    # version is the same.
+    - if [[ "$CONDA_PYTHON_VERSION" == "2.7" ]]; then
+        wget https://repo.continuum.io/miniconda/Miniconda2-latest-Linux-x86_64.sh -O miniconda.sh;
+      else
+        wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
+      fi
+#    - wget http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh
+#    - chmod +x miniconda.sh
+#    - ./miniconda.sh -b
+    - bash miniconda.sh -b -p $HOME/miniconda
+    - export PATH="$HOME/miniconda/bin:$PATH"
+    - hash -r
+    - conda config --set always_yes yes --set changeps1 no
+    - conda update -q conda
+    # Useful for debugging any issues with conda
+    - conda info -a
+
 # command to install dependencies
 install:
     - conda update --yes conda
@@ -22,6 +31,8 @@ install:
     - conda install --yes -n travis --file requirements_conda.txt
     - source activate travis
     - pip install -r requirements_pip.txt
+    - python -m io3d.datasets -l 3Dircadb1.1 jatra_5mm
+#    - ./scripts/get_test_data.sh
 # command to run tests
 script: nosetests -v --with-coverage --cover-package=bodynavigation
 after_success:
