--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,7 @@ before_install:
 
 # command to install dependencies
 install:
+    - conda config --add channels conda-forge mjirik
     - conda update --yes conda
     - conda create --yes -n travis python=$CONDA_PYTHON_VERSION
     - source activate travis
