--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,7 @@ before_install:
 
 # command to install dependencies
 install:
+    - conda config --add channels conda-forge
     - conda config --add channels SimpleITK
     - conda config --add channels mjirik
     - conda update --yes conda
