don't need pydicom

--- a/requirements_conda.txt
+++ b/requirements_conda.txt
@@ -5,6 +5,6 @@ scikit-learn
 pyqt=4.*
 imtools
 io3d
-pydicom==0.9.*
+# pydicom==0.9.* # probably dont nead pydicom. It is imported by io3d
 sed3
 pandas
