--- a/.travis.yml
+++ b/.travis.yml
@@ -37,6 +37,7 @@ install:
     - python -m io3d.datasets -l 3Dircadb1.1
 #    - ./scripts/get_test_data.sh
 # command to run tests
-script: nosetests -v -s --with-coverage --cover-package=bodynavigation
+# using "travis_wait 20" to stop travis from terminating after 10min of no output.
+script: travis_wait 20 nosetests -v -s --with-coverage --cover-package=bodynavigation
 after_success:
     - coveralls
