--- a/.travis.yml
+++ b/.travis.yml
@@ -35,9 +35,10 @@ install:
     - conda install --yes --file requirements_conda.txt python=$CONDA_PYTHON_VERSION
     - pip install -r requirements_pip.txt
     - python -m io3d.datasets -l 3Dircadb1.1
-#    - ./scripts/get_test_data.sh
+
 # command to run tests
-# using "travis_wait 60" to stop travis from terminating after 10min of no output.
-script: travis_wait 60 nosetests -v -s --with-coverage --cover-package=bodynavigation
+# using "travis_wait MIN" to stop travis from terminating after 10min of no output.
+# Note: travis_wait time is shared between different python versions!
+script: travis_wait 180 nosetests -v -s --with-coverage --cover-package=bodynavigation
 after_success:
     - coveralls
