--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,8 @@ language: python
 
 # run in virtualization environment with high memory (7.5 GB)
 # https://docs.travis-ci.com/user/reference/overview/#virtualization-environments
-sudo: required
-dist: trusty
+# sudo: required
+# dist: trusty
 
 env:
     - CONDA_PYTHON_VERSION=2.7
@@ -42,18 +42,9 @@ install:
     - pip install -r requirements_pip.txt
     - python -m io3d.datasets -l 3Dircadb1.1
 
-# write stuff to stdout to stop travis from terminating after 10min of no output.
-# Note: doing it this way because "travis_wait MIN" errors on complex functions
-before_script: |
-  function keep_alive() {
-    while true; do
-      echo -en "\a"
-      sleep 5
-    done
-  }
-  keep_alive &
-
 # command to run tests
-script: nosetests -v -s --with-coverage --cover-package=bodynavigation
+# using "travis_wait MIN" to stop travis from terminating after 10min of no output.
+# Note: travis_wait time is shared between different python versions!
+script: travis_wait 180 nosetests -v -s --with-coverage --cover-package=bodynavigation
 after_success:
     - coveralls
