--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,16 @@
 [bumpversion]
 current_version = 0.2.0
-files = setup.py meta.yaml
+files = setup.py conda-recipe/meta.yaml
 commit = True
 tag = True
 tag_name = {new_version}
 
 [nosetests]
 attr = !interactive,!slow
+
+[tool:pytest]
+addopts = -m "not interactive and not slow"
+markers =
+    interactive: marks interactive tests
+    slow: marks slow tests
 
