--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -43,6 +43,7 @@ requirements:
     - pandas
     - sed3
     - astropy
+    - imma
 
   run:
     - python
@@ -55,6 +56,7 @@ requirements:
     - pandas
     - sed3
     - astropy
+    - imma
 
 test:
   # Python imports
