--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [bumpversion]
-current_version = 0.4.6
-files = setup.py conda-recipe/meta.yaml
+current_version = 0.4.7
+files = setup.py conda-recipe/meta.yaml bumpversion/__init__.py
 commit = True
 tag = True
 tag_name = {new_version}
