--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -46,6 +46,7 @@ requirements:
     - pandas
 #    - sed3
     - astropy
+    - loguru
 #    - imma
 
   run:
@@ -61,6 +62,7 @@ requirements:
     - astropy
     - imma
     - dill
+    - loguru
 
 test:
   # Python imports
