--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [bumpversion]
 current_version = 0.4.12
-files = setup.py conda-recipe/meta.yaml bodynavigation/__init__.py
+files = setup.py conda-recipe/meta.yaml bodynavigation/__init__.py changelog.md
 commit = True
 tag = True
 tag_name = {new_version}
